# STL-Renderer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTACION.md  DOCUMENTATION.md  LICENSE  README.md  create_icon.ps1
src/: app.cpp  app.h  glad.h  gui.cpp  gui.h  logger.h  logger_new.h  main.cpp  model.h  renderer.cpp  renderer.h  resources.rc  shader.h  stl_loader.cpp  stl_loader.h
